--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    
     "nx": "nx",
     "start": "nx serve",
     "build": "nx build",
@@ -28,17 +27,35 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "~6.6.3",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
-     
-    "@nrwl/tao": "12.7.0",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
     "@nrwl/cli": "12.7.0",
+    "@nrwl/eslint-plugin-nx": "12.7.0",
+    "@nrwl/jest": "12.7.0",
+    "@nrwl/linter": "12.7.0",
+    "@nrwl/nest": "^12.7.0",
+    "@nrwl/node": "12.7.0",
+    "@nrwl/tao": "12.7.0",
     "@nrwl/workspace": "12.7.0",
+    "@types/jest": "26.0.24",
     "@types/node": "14.14.33",
+    "@typescript-eslint/eslint-plugin": "~4.28.3",
+    "@typescript-eslint/parser": "~4.28.3",
     "dotenv": "~10.0.0",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
+    "jest": "27.0.3",
+    "prettier": "^2.3.1",
+    "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
-    "typescript": "~4.3.5",
-    "prettier": "^2.3.1"
+    "typescript": "~4.3.5"
   }
 }
