--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "update": "nx migrate latest",
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "start:azure": "yarn build && func host start"
   },
   "private": true,
   "dependencies": {
+    "@azure/functions": "^1.0.3",
+    "@nestjs/azure-func-http": "^0.7.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
@@ -35,6 +38,7 @@
     "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@nestjs/cli": "^8.1.1",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@nrwl/cli": "12.7.0",
@@ -46,6 +50,7 @@
     "@nrwl/node": "12.7.0",
     "@nrwl/tao": "12.7.0",
     "@nrwl/workspace": "12.7.0",
+    "@schematics/angular": "^12.2.1",
     "@types/jest": "26.0.24",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
